[package]
authors = ["ihciah <ihciah@gmail.com>"]
edition = '2018'
description = "Make your DNS cleaner."
name = "clean-dns-bpf"
version = "0.1.0"

[dependencies]
cty = "0.2"
#redbpf-macros = "2.3"
redbpf-macros = { path = "../redbpf/redbpf-macros" }
#redbpf-probes = "2.3"
#redbpf = { path = "../redbpf/redbpf", features = ["load"] }
redbpf-probes = { path = "../redbpf/redbpf-probes" }
#tokio = { version = "^1.0.1", features = ["rt", "macros", "signal", "time"] }
#futures = "0.3"
#getopts = "0.2"
#libc = "0.2"

[build-dependencies]
cargo-bpf = { path = "../redbpf/cargo-bpf" , default-features = false, features = ["bindings"] }
glob = "0.3.0"
bpf-sys = { path = "../redbpf/bpf-sys" }
tracing = "0.1.26"
tracing-subscriber = "0.2.18"

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "clean-dns"
path = "src/clean_dns/main.rs"
required-features = ["probes"]
