[package]
authors = ["ihciah <ihciah@gmail.com>"]
edition = '2018'
description = "Make your DNS cleaner."
name = "clean-dns-bpf"
version = "0.1.0"

[dependencies]
cty = "0.2"
redbpf-macros = { path = "../redbpf/redbpf-macros" }
redbpf-probes = { path = "../redbpf/redbpf-probes" }

[build-dependencies]
cargo-bpf = { path = "../redbpf/cargo-bpf" , default-features = false, features = ["bindings"] }
bpf-sys = { path = "../redbpf/bpf-sys" }


[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "clean-dns"
path = "src/clean_dns.rs"
required-features = ["probes"]
